RESOLVED FIXED297296
AX: Scrolled iframe content cannot be hit tested
https://bugs.webkit.org/show_bug.cgi?id=297296
Summary AX: Scrolled iframe content cannot be hit tested
Joshua Hoffman
Reported 2025-08-12 15:52:40 PDT
Attachments
Joshua Hoffman
Comment 1 2025-08-12 16:36:07 PDT
EWS
Comment 2 2025-08-13 09:27:45 PDT
Committed 298627@main (7f1653cda09d): <https://commits.webkit.org/298627@main> Reviewed commits have been landed. Closing PR #49294 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.